<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bag Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_record">Record Number</string>
    <string name="submit_record_locater">Find My Bag</string>
    <string name="hint_aavantage_number">AAdvantage #</string>
    <string name="hint_password">Password</string>
    <string name="submit_login">Login</string>
    <string name="toast_login_failed">Login was unsuccessful.</string>
    <string name="toast_login_locked">Login has been temporarily disabled.</string>

</resources>